[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "CLI toolkit for investment research and market analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
atlas = "atlas.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]