[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
dynamic = ["version"]
description = "CLI toolkit for investment research and market analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
    "pandas>=2.3",
    "pyarrow~=24.0",
    "tabulate>=0.9",
]

[project.scripts]
atlas = "atlas.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]